fix: naming rule violations, source-code headers. some cosmetic fixes

--- a/Extension/ASD.ESH/Assets/GettingStartedGuide.html
+++ b/Extension/ASD.ESH/Assets/GettingStartedGuide.html
@@ -1,4 +1,11 @@
-﻿<!DOCTYPE html>
+﻿<!--
+    Copyright (c) "ESH-Repository" source code contributors. All Rights Reserved.
+    Licensed under the Microsoft Public License (MS-PL).
+    See LICENSE.md in the "ESH-Repository" root for license information.
+    "ESH-Repository" root address: https://github.com/Art-Stea1th/Enhanced-Syntax-Highlighting
+-->
+
+<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
@@ -43,7 +50,6 @@
                 and scrolling to properties starting with the prefix
                 <h>"User Tags - ..."</h>
             </li>
-
             <li>
                 <h>Just select the colors</h> you like, <h>click "ok"</h> and
                 <h>write code</h> in a little more friendly environment <h>;)<h />
